Fix emoji picker on small screens

--- a/packages/rocketchat-emojione/emojiPicker.less
+++ b/packages/rocketchat-emojione/emojiPicker.less
@@ -9,7 +9,8 @@
 	}
 }
 .emoji-picker {
-	width: 390px;
+	width: 100%;
+	max-width: 390px;
 	background-color: @secondary-background-color;
 	border-radius: 5px;
 	box-shadow: 0px 1px 1px 0 rgba(0,0,0,0.2), 0 2px 10px 0 rgba(0,0,0,.16);
@@ -40,7 +41,7 @@
 			> li {
 				display: table-cell;
 				margin: 0 2px;
-				padding: 6px;
+				padding: 6px 0;
 				opacity: 0.3;
 
 				border-bottom: 2px solid @secondary-background-color;
